--- a/public/css/style.css
+++ b/public/css/style.css
@@ -443,6 +443,17 @@ body .promo {
     white-space: nowrap
 
  }
+  .sliderMode-container{
+    margin-bottom: 18px;
+  }
+  .sliderMode {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+    max-width: 99%;
+    overflow-x: scroll;
+    white-space: nowrap
+
+ }
 
  .sliderVisiter .carte-top{
   padding: 5px;
