--- a/public/css/decoPage.css
+++ b/public/css/decoPage.css
@@ -11,7 +11,7 @@
 }
 /* la navigation ici  */
 body {
-background-color: rgba(240, 255, 255, 0.568);
+background-color: white;
 
 }
 body .page-top{
@@ -238,7 +238,7 @@ margin-left: 10px;
   color: white;
 }
 .burger-nav #link{
- box-sizing: border-box;
+  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
  align-items: center;
@@ -246,19 +246,19 @@ margin-left: 10px;
  padding: 0px;
  height: 30px;
  width: auto;
+
 }
 #link .left{
 display: flex;
 align-items: center;
-height: 30px;
-padding: 0px;
 width: 195px;
+height: 30px;
+padding: 0%;
 }
 #link .left i{
 font-size: 1.2rem;
 color: grey;  
-margin-right: 10px;
-margin-left: 2px !important;
+margin-right: 20px;
 }
 
 /* burger menu ici  */
@@ -365,40 +365,38 @@ margin-left: 2px !important;
 body .main{
   margin-top: 155px;
   margin-bottom: 50px;
-  padding: 0px 10px 0px 10px;
+  padding: 0px 5px 0px 5px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  box-sizing: border-box;
 }
 
 .main .carte{
   display: flex;
+  flex-direction: column;
+  min-height: 300px;
+  height: auto;
+  width: 97%;
   background-color: white; 
-  border-radius: 10px;
+  margin-top: 5px;
   margin-bottom: 5px;
+  font-family: 'Courier New', Courier, monospace;
 }
-.left{
-  padding: 10px;
-  padding-top: 40px;
-  width: 35%;
-}
-.right {
-  padding: 5px;
-  width: 65%;
-
-}
-.right .bottom{
+.main .card-top{
+  height: 180px;
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: #f6f6f6;
 }
-.bottom button{
-  border: 2px solid rgb(14, 229, 14);
-  color: rgb(14, 182, 14);
-  background-color: white;
-  border-radius: 7px;
+.main .card-details{
   padding: 5px;
 }
-.carte i{
-  color: gold;
+.main .carte p{
+  margin-bottom: 1px;
 }
+
+
 
 /* les carte de produits ici  */
 
