--- a/public/css/montresCopage.css
+++ b/public/css/montresCopage.css
@@ -11,7 +11,7 @@
 }
 /* la navigation ici  */
 body {
-background-color: rgba(240, 255, 255, 0.568);
+background-color: white;
 
 }
 body .page-top{
@@ -203,33 +203,31 @@ transition: 0s;
 /* la barre de recherche ici */
 
 /* burger menu ici  */
-.scroll-annule{
-  overflow: hidden;
+body .burger-nav {
+  max-height: 100vh; /* Par exemple, définissez une hauteur maximale */
+  background-color: white;
+  color: rgb(57, 56, 56);
+  position: absolute;
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: 0.3s ease-in-out;
+  overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
 }
- body .burger-nav {
-    max-height: 100vh; /* Par exemple, définissez une hauteur maximale */
-    background-color: white;
-    color: rgb(57, 56, 56);
-    z-index: 10;
-    position: fixed;
-    top: 0;
-    left: 0;
-    transition: 0.3s ease-in-out;
-    overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
-  }
 
-  
- .burger-nav #menu-link{
-    display: none;
-    padding: 10px;
- }
- .burger-nav #menu-link p{
-  font-size: 0.8rem !important;
-  margin: 0;
-  margin-left: 10px;
- }
 
- .burger-nav #affiche {
+.burger-nav #menu-link{
+  display: none;
+  padding: 10px;
+}
+.burger-nav #menu-link p{
+font-size: 0.8rem !important;
+margin: 0;
+margin-left: 10px;
+}
+
+.burger-nav #affiche {
   height: auto;
   margin-top: 5px;
   background-color: #0f68c1;
@@ -239,26 +237,31 @@ transition: 0s;
   text-align: center;
   color: white;
 }
- .burger-nav #link{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   font-weight: 600;
-   padding: 0px;
-   height: 30px;
- }
- #link .left{
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  }
+.burger-nav #link{
+  box-sizing: border-box;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ font-weight: 600;
+ padding: 0px;
+ height: 30px;
+ width: auto;
+
+}
+#link .left{
+display: flex;
+align-items: center;
+width: 195px;
+height: 30px;
+padding: 0%;
+}
 #link .left i{
-  font-size: 1.2rem;
-  color: grey;  
-  margin-right: 20px;
+font-size: 1.2rem;
+color: grey;  
+margin-right: 20px;
 }
 
- /* burger menu ici  */
+/* burger menu ici  */
 
 /* mon panier ici  */
 .monPanier {
@@ -362,40 +365,38 @@ transition: 0s;
 body .main{
   margin-top: 155px;
   margin-bottom: 50px;
-  padding: 0px 10px 0px 10px;
+  padding: 0px 5px 0px 5px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  box-sizing: border-box;
 }
 
 .main .carte{
   display: flex;
+  flex-direction: column;
+  min-height: 300px;
+  height: auto;
+  width: 97%;
   background-color: white; 
-  border-radius: 10px;
+  margin-top: 5px;
   margin-bottom: 5px;
+  font-family: 'Courier New', Courier, monospace;
 }
-.main .left{
-  padding: 10px;
-  padding-top: 40px;
-  width: 35%;
-}
-.right {
-  padding: 5px;
-  width: 65%;
-
-}
-.right .bottom{
+.main .card-top{
+  height: 180px;
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: #f6f6f6;
 }
-.bottom button{
-  border: 2px solid rgb(14, 229, 14);
-  color: rgb(14, 182, 14);
-  background-color: white;
-  border-radius: 7px;
+.main .card-details{
   padding: 5px;
 }
-.carte i{
-  color: gold;
+.main .carte p{
+  margin-bottom: 1px;
 }
+
+
 
 /* les carte de produits ici  */
 
