--- a/public/css/pcTools.css
+++ b/public/css/pcTools.css
@@ -202,36 +202,32 @@ transition: 0s;
 
 /* la barre de recherche ici */
 
-
-
 /* burger menu ici  */
-.scroll-annule{
-  overflow: hidden;
+body .burger-nav {
+  max-height: 100vh; /* Par exemple, définissez une hauteur maximale */
+  background-color: white;
+  color: rgb(57, 56, 56);
+  position: absolute;
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 0;
+  transition: 0.3s ease-in-out;
+  overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
 }
- body .burger-nav {
-    max-height: 100vh; /* Par exemple, définissez une hauteur maximale */
-    background-color: white;
-    color: rgb(57, 56, 56);
-    z-index: 10;
-    position: fixed;
-    top: 0;
-    left: 0;
-    transition: 0.3s ease-in-out;
-    overflow-y: auto; /* Permet le défilement vertical lorsque le contenu dépasse la hauteur maximale */
-  }
 
-  
- .burger-nav #menu-link{
-    display: none;
-    padding: 10px;
- }
- .burger-nav #menu-link p{
-  font-size: 0.8rem !important;
-  margin: 0;
-  margin-left: 10px;
- }
 
- .burger-nav #affiche {
+.burger-nav #menu-link{
+  display: none;
+  padding: 10px;
+}
+.burger-nav #menu-link p{
+font-size: 0.8rem !important;
+margin: 0;
+margin-left: 10px;
+}
+
+.burger-nav #affiche {
   height: auto;
   margin-top: 5px;
   background-color: #0f68c1;
@@ -241,26 +237,31 @@ transition: 0s;
   text-align: center;
   color: white;
 }
- .burger-nav #link{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   font-weight: 600;
-   padding: 0px;
-   height: 30px;
- }
- #link .left{
-  display: flex;
-  align-items: center;
-  justify-content: start;
-  }
+.burger-nav #link{
+  box-sizing: border-box;
+ display: flex;
+ justify-content: space-between;
+ align-items: center;
+ font-weight: 600;
+ padding: 0px;
+ height: 30px;
+ width: auto;
+
+}
+#link .left{
+display: flex;
+align-items: center;
+width: 195px;
+height: 30px;
+padding: 0%;
+}
 #link .left i{
-  font-size: 1.2rem;
-  color: grey;  
-  margin-right: 20px;
+font-size: 1.2rem;
+color: grey;  
+margin-right: 20px;
 }
 
- /* burger menu ici  */
+/* burger menu ici  */
 
 /* mon panier ici  */
 .monPanier {
