--- a/views/composants/tab-bar.ejs
+++ b/views/composants/tab-bar.ejs
@@ -29,23 +29,7 @@
                 <img src="/img/bijoux.jpg" alt="">
             </div>
         </div>
-        <div class="nav-bar-card shadow-sm">
-            <div class="carte-top">
-                <p>Location de <br> maison <br>
-                </p>
-            </div>
-            <div class="carte-bottom">
-                <img src="/img/maison.webp" alt="">
-            </div>
-        </div>
-        <div class="nav-bar-card shadow-sm">
-            <div class="carte-top">
-                <p>Location de <br> véhicule</p>
-            </div>
-            <div class="carte-bottom">
-                <img src="/img/voiture.jpg" alt="">
-            </div>
-        </div>
+        
         <div class="nav-bar-card shadow-sm" onclick="phone()">
             <div class="carte-top">
                 <p>Telephone, Pc et<br>
@@ -91,7 +75,7 @@
 
             </div>
         </div>
-        <div class="nav-bar-card shadow-sm">
+        <div class="nav-bar-card shadow-sm" onclick="electroMenager()">
             <div class="carte-top">
                 <p>Electro - <br>
                     menager
@@ -102,7 +86,33 @@
 
             </div>
         </div>
-        
+        <div class="nav-bar-card shadow-sm" onclick="chichaStore()">
+            <div class="carte-top">
+                <p>Chicha store
+                </p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/chicha.webp" width="30" alt="">
+
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm" onclick="appartement()">
+            <div class="carte-top">
+                <p>Location de <br> maison <br>
+                </p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/maison.webp" alt="">
+            </div>
+        </div>
+        <div class="nav-bar-card shadow-sm" onclick="vehicule()">
+            <div class="carte-top">
+                <p>Location de <br> véhicule</p>
+            </div>
+            <div class="carte-bottom">
+                <img src="/img/voiture.jpg" alt="">
+            </div>
+        </div>
                 
     </div>
 </div>
