ajout de boucle sur page beauter & beaute=>beauter

--- a/views/composants/burger-menu.ejs
+++ b/views/composants/burger-menu.ejs
@@ -48,7 +48,7 @@
         <div id="link" onclick="beauter()">
             <div class="left">
                 <i class="fa-solid fa-wand-magic-sparkles"></i>
-                <p>Beaute</p>        
+                <p>Beauter</p>        
             </div>
             <i style="font-size: 1.7rem;" class='bx bx-chevron-right'></i>
         </div> <br>
